--- a/index.html
+++ b/index.html
@@ -67,7 +67,29 @@
     </div>
   </div>
 
-  <footer></footer>
+  <footer>
+    <div class="container-fluid py-5">
+      <div class="row">
+        <div class="col">
+         <p>1357 Mutt Street, Rottweller CA. 12345</p> 
+        </div>
+
+        <div class="col">
+          <img src="./assets/CompanyLogo.png" alt="">
+         </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+         <p>Phone: 123-456-7890</p> 
+        </div>
+
+        <div class="col">
+          <p>Copyright @ Muzzles Restaurant</p>
+         </div>
+      </div>
+    </div>
+  </footer>
 
 
 
