--- a/index.html
+++ b/index.html
@@ -37,18 +37,24 @@
     </div>
   </nav>
 
+
+  
+
   <div class="container-fluid">
     <div class="row">
-      <div class="col" id="homeImage">
+      <div class="col-12" id="homeImage">
+       
       </div>
     </div>
+  </div>
+  <div class="container pt-5">
     <div class="row">
-      <div class="col-2"></div>
-      <div class="col-3">
-        <img src="./assets/homeSingle.jpg" class="img-thumbnail" alt="...">
+      <div class="col-1"></div>
+      <div class="col-4">
+        <img src="./assets/homeSingle.jpg" class="img-fluid" alt="...">
       </div>
-      <div class="col-5">
-        <div class="card" style="width: 50rem;">
+      <div class="col-6">
+        <div class="card">
           <div class="card-body">
             <p class="card-text">Muzzles Sandwiches & Grill</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -60,33 +66,31 @@
           <img src="./assets/HomeImage.jpg" class="card-img-top" alt="...">
         </div>
       </div>
-      <div class="col-2"></div>
+      <div class="col-1"></div>
     </div>
     <div class="row">
-      
+
     </div>
   </div>
 
   <footer>
     <div class="container-fluid py-5">
       <div class="row">
-        <div class="col">
-         <p>1357 Mutt Street, Rottweller CA. 12345</p> 
+        <div class="col-6 d-flex justify-content-start">
+          <p>1357 Mutt Street, Rottweller CA. 12345</p>
         </div>
-
-        <div class="col">
+        <div class="col-6 d-flex justify-content-end">
           <img src="./assets/CompanyLogo.png" alt="">
-         </div>
+        </div>
       </div>
 
       <div class="row">
-        <div class="col">
-         <p>Phone: 123-456-7890</p> 
+        <div class="col-6  d-flex justify-content-start">
+          <p>Phone: 123-456-7890</p>
         </div>
-
-        <div class="col">
+        <div class="col-6 d-flex justify-content-end">
           <p>Copyright @ Muzzles Restaurant</p>
-         </div>
+        </div>
       </div>
     </div>
   </footer>
@@ -101,8 +105,8 @@
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-    crossorigin="anonymous"></script>
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+  </script>
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
