--- a/pages/about.html
+++ b/pages/about.html
@@ -43,7 +43,7 @@
             <div class="col-7">
                 <div class="card" id="AMainCard" style="width: 100%;">
                     <div class="card-body">
-                        <h5 class="card-title">The Story Behind the Grill</h5>
+                        <h5 class="card-title AcardHeading">The Story Behind the Grill</h5>
                         <p class="card-text AcardText">Malesuada fames ac turpis egestas integer eget aliquet nibh praesent.
                             Mattis molestie a iaculis at erat pellentesque adipiscing commodo. Quisque non tellus orci
                             ac auctor augue. Tincidunt augue interdum velit euismod in pellentesque massa. Vel pharetra
