--- a/pages/catering.html
+++ b/pages/catering.html
@@ -18,40 +18,40 @@
     <nav class="navbar navbar-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="../assets/MuzzlesLogo.png" alt="" width="250" height="92">
+                <img src="../assets/MuzzlesLogo.png" alt="Muzzles Restaurnt logo" width="250" height="92">
             </a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">About</a>
+                    <a class="nav-link navbarFont" aria-current="page" href="../pages/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Menu</a>
+                    <a class="nav-link navbarFont" href="#">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Catering</a>
+                    <a class="nav-link active navbarFont" href="../pages/catering.html">Catering</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Photo</a>
+                    <a class="nav-link navbarFont" href="#">Photo</a>
                 </li>
             </ul>
         </div>
     </nav>
     <div class="row pt-3">
-        <div class="col-12" id="ATeamHeading">
+        <div class="col-12 ATeamHeading">
             <h2>Catering</h2>
         </div>
     </div>
-    <div class="container-fluid pt-5">
+    <div class="container pt-5">
         <div class="row">
-            <div class="col-12" id="cateringHeroImage">
+            <div class="col-12 cateringHeroImage">
 
             </div>
         </div>
     </div>
     <div class="container-fluid pt-5 sideImage" > 
         <div class="row">
-            <div class="col-lg-5 col-md-4 col-sm-12">
-                <img src="../assets/cateringMaine.jpg" class="img-fluid" alt="Trays of deli meats and stuffed tomatoes">
+            <div class="col-lg-5 col-md-4 col-sm-12 picOne">
+                <!-- <img src="../assets/cateringMaine.jpg" class="img-fluid" alt="Trays of deli meats and stuffed tomatoes"> -->
             </div>
             <div class="col-lg-7 col-md-8 col-sm-12">
                 <div class="card">
