Adjust fonts and add alt tags

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,12 +17,12 @@
 <body>
     <nav class="navbar navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="../assets/MuzzlesLogo.png" alt="" width="250" height="92">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../assets/MuzzlesLogo.png" alt="Muzzles Restaurant logo" width="250" height="92">
             </a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">About</a>
+                    <a class="nav-link active navbarFont" aria-current="page" href="../pages/about.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Menu</a>
@@ -38,10 +38,10 @@
     </nav>
     <div class="container-fluid pt-3">
         <div class="row">
-            <div class="col-5" id="AMainImage">
+            <div class="col-5 AMainImage">
             </div>
             <div class="col-7">
-                <div class="card" id="AMainCard" style="width: 100%;">
+                <div class="card AMainCard" style="width: 100%;">
                     <div class="card-body">
                         <h5 class="card-title AcardHeading">The Story Behind the Grill</h5>
                         <p class="card-text AcardText">Malesuada fames ac turpis egestas integer eget aliquet nibh praesent.
@@ -74,16 +74,16 @@
             </div>
         </div>
         <div class="row pt-3"></div>
-        <div class="col" id=ATeamHeading>
+        <div class="col ATeamHeading">
             <h2>Our Team</h2>
         </div>
         <div class="row pt-2">
             <div class="col-4">
                 <div class="card" style="width: 100%;">
-                    <img src="../assets/doxie3.jpg" class="card-img-top" alt="...">
+                    <img src="../assets/doxie3.jpg" class="card-img-top" alt="Doxie wearing a chef's hat and a bowtie collar">
                     <div class="card-body">
-                        <h5 class="card-title">George</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <h5 class="card-title AcardHeading">George</h5>
+                        <p class="card-text AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed
                             sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu
                             augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</p>
@@ -92,10 +92,10 @@
             </div>
             <div class="col-4">
                 <div class="card" style="width: 100%;">
-                    <img src="../assets/jackrussel.jpg" class="card-img-top" alt="...">
+                    <img src="../assets/jackrussel.jpg" class="card-img-top" alt="Jack Russell Terrier selecting a cut of meat">
                     <div class="card-body">
-                        <h5 class="card-title">Butterscotch</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <h5 class="card-title AcardHeading">Butterscotch</h5>
+                        <p class="card-text AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed
                             sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu
                             augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</p>
@@ -104,10 +104,10 @@
             </div>
             <div class="col-4">
                 <div class="card" style="width: 100%;">
-                    <img src="../assets/doxie1.jpg" class="card-img-top" alt="...">
+                    <img src="../assets/doxie1.jpg" class="card-img-top" alt="Doxie wearing a vest and a bowtie">
                     <div class="card-body">
-                        <h5 class="card-title">Louie</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <h5 class="card-title AcardHeading">Louie</h5>
+                        <p class="card-text AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed
                             sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu
                             augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</p>
@@ -118,10 +118,10 @@
         <div class="row pt-3">
             <div class="col-4">
                 <div class="card" style="width: 100%;">
-                    <img src="../assets/novascotia.jpg" class="card-img-top" alt="...">
+                    <img src="../assets/novascotia.jpg" class="card-img-top" alt="Dog earing a bib">
                     <div class="card-body">
-                        <h5 class="card-title">Willow</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <h5 class="card-title AcardHeading">Willow</h5>
+                        <p class="card-text AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed
                             sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu
                             augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</p>
@@ -130,10 +130,10 @@
             </div>
             <div class="col-4">
                 <div class="card" style="width: 100%;">
-                    <img src="../assets/doxie2.jpg" class="card-img-top" alt="...">
+                    <img src="../assets/doxie2.jpg" class="card-img-top" alt="Doxie wearing a chef's hat and selecting cheese">
                     <div class="card-body">
-                        <h5 class="card-title">Skittles</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <h5 class="card-title AcardHeading">Skittles</h5>
+                        <p class="card-text AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed
                             sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu
                             augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</p>
@@ -142,10 +142,10 @@
             </div>
             <div class="col-4">
                 <div class="card" style="width: 100%;">
-                    <img src="../assets/staffie.jpg" class="card-img-top" alt="...">
+                    <img src="../assets/staffie.jpg" class="card-img-top" alt="Dog wearing a chef hat">
                     <div class="card-body">
-                        <h5 class="card-title">Mario</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <h5 class="card-title AcardHeading">Mario</h5>
+                        <p class="card-text AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed
                             sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu
                             augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</p>
@@ -175,7 +175,7 @@
                 <p>1357 Mutt Street, Rottweller CA. 12345</p>
             </div>
             <div class="col-6 d-flex justify-content-end">
-                <img src="../assets/CompanyLogo.png" alt="">
+                <img src="../assets/CompanyLogo.png" alt="A Spaniel Compnay logo">
             </div>
         </div>
 
