Add link to index

--- a/pages/catering.html
+++ b/pages/catering.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../index.html">
                 <img src="../assets/MuzzlesLogo.png" alt="Muzzles Restaurnt logo" width="250" height="92">
             </a>
             <ul class="nav justify-content-end">
