Added About and Catering pages

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       </a>
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">About</a>
+          <a class="nav-link active" aria-current="page" href="./pages/about.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Menu</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Catering</a>
+          <a class="nav-link" href="./pages/catering.html">Catering</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Photo</a>
