Added index, catering, and about to Navbar

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,18 +17,18 @@
 <body>
     <nav class="navbar navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../index.html">
                 <img src="../assets/MuzzlesLogo.png" alt="" width="250" height="92">
             </a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">About</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/about.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Catering</a>
+                    <a class="nav-link" href="../pages/catering.html">Catering</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Photo</a>
