--- a/pages/about.html
+++ b/pages/about.html
@@ -25,13 +25,13 @@
                     <a class="nav-link active navbarFont" aria-current="page" href="../pages/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Menu</a>
+                    <a class="nav-link navbarFont" href="#">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Catering</a>
+                    <a class="nav-link navbarFont" href="#">Catering</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Photo</a>
+                    <a class="nav-link navbarFont" href="#">Photo</a>
                 </li>
             </ul>
         </div>
