Add Responsiveness Part I

--- a/pages/about.html
+++ b/pages/about.html
@@ -25,23 +25,22 @@
                     <a class="nav-link active navbarFont" aria-current="page" href="../pages/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Menu</a>
+                    <a class="nav-link navbarFont" href="#">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Catering</a>
+                    <a class="nav-link navbarFont" href="#">Catering</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Photo</a>
+                    <a class="nav-link navbarFont" href="#">Photo</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div class="container-fluid pt-3">
+    <div class="container pt-3">
         <div class="row">
-            <div class="col-5 AMainImage">
-            </div>
-            <div class="col-7">
-                <div class="card AMainCard" style="width: 100%;">
+            <div class="col-lg-5 col-md-4 col-sm-12 AMainImage"></div>
+            <div class="col-lg-7 col-md-8 col-sm-12">
+                <div class="card">
                     <div class="card-body">
                         <h5 class="card-title AcardHeading">The Story Behind the Grill</h5>
                         <p class="card-text AcardText">Malesuada fames ac turpis egestas integer eget aliquet nibh praesent.
@@ -78,7 +77,7 @@
             <h2>Our Team</h2>
         </div>
         <div class="row pt-2">
-            <div class="col-4">
+            <div class="col-lg-4 col-md-12">
                 <div class="card" style="width: 100%;">
                     <img src="../assets/doxie3.jpg" class="card-img-top" alt="Doxie wearing a chef's hat and a bowtie collar">
                     <div class="card-body">
@@ -90,7 +89,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-md-12">
                 <div class="card" style="width: 100%;">
                     <img src="../assets/jackrussel.jpg" class="card-img-top" alt="Jack Russell Terrier selecting a cut of meat">
                     <div class="card-body">
@@ -102,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-md-12">
                 <div class="card" style="width: 100%;">
                     <img src="../assets/doxie1.jpg" class="card-img-top" alt="Doxie wearing a vest and a bowtie">
                     <div class="card-body">
@@ -116,7 +115,7 @@
             </div>
         </div>
         <div class="row pt-3">
-            <div class="col-4">
+            <div class="col-lg-4 col-md-12">
                 <div class="card" style="width: 100%;">
                     <img src="../assets/novascotia.jpg" class="card-img-top" alt="Dog earing a bib">
                     <div class="card-body">
@@ -128,7 +127,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-md-12">
                 <div class="card" style="width: 100%;">
                     <img src="../assets/doxie2.jpg" class="card-img-top" alt="Doxie wearing a chef's hat and selecting cheese">
                     <div class="card-body">
@@ -140,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-md-12">
                 <div class="card" style="width: 100%;">
                     <img src="../assets/staffie.jpg" class="card-img-top" alt="Dog wearing a chef hat">
                     <div class="card-body">
