--- a/pages/about.html
+++ b/pages/about.html
@@ -38,8 +38,10 @@
     </nav>
     <div class="container pt-3">
         <div class="row">
-            <div class="col-lg-5 col-md-4 col-sm-12 AMainImage"></div>
-            <div class="col-lg-7 col-md-8 col-sm-12">
+            <div class="col-lg-5 col-sm-12">
+                <img src="../assets/AboutMain.jpg" class="img-fluid" alt="...">
+            </div>
+            <div class="col-lg-7 col-sm-12">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title AcardHeading">The Story Behind the Grill</h5>
@@ -77,7 +79,7 @@
             <h2>Our Team</h2>
         </div>
         <div class="row pt-2">
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-6 col-sm-12 pt-3">
                 <div class="card" style="width: 100%;">
                     <img src="../assets/doxie3.jpg" class="card-img-top" alt="Doxie wearing a chef's hat and a bowtie collar">
                     <div class="card-body">
@@ -89,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-6 col-sm-12 pt-3">
                 <div class="card" style="width: 100%;">
                     <img src="../assets/jackrussel.jpg" class="card-img-top" alt="Jack Russell Terrier selecting a cut of meat">
                     <div class="card-body">
@@ -101,7 +103,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-6 col-sm-12 pt-3">
                 <div class="card" style="width: 100%;">
                     <img src="../assets/doxie1.jpg" class="card-img-top" alt="Doxie wearing a vest and a bowtie">
                     <div class="card-body">
@@ -113,9 +115,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row pt-3">
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-6 col-sm-12 pt-3">
                 <div class="card" style="width: 100%;">
                     <img src="../assets/novascotia.jpg" class="card-img-top" alt="Dog earing a bib">
                     <div class="card-body">
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-6 col-sm-12 pt-3">
                 <div class="card" style="width: 100%;">
                     <img src="../assets/doxie2.jpg" class="card-img-top" alt="Doxie wearing a chef's hat and selecting cheese">
                     <div class="card-body">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-6 col-sm-12 pt-3">
                 <div class="card" style="width: 100%;">
                     <img src="../assets/staffie.jpg" class="card-img-top" alt="Dog wearing a chef hat">
                     <div class="card-body">
@@ -151,7 +151,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
