--- a/pages/catering.html
+++ b/pages/catering.html
@@ -11,7 +11,7 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
 
-    <title>About</title>
+    <title>Catering</title>
 </head>
 
 <body>
@@ -50,10 +50,10 @@
     </div>
     <div class="container-fluid pt-5 sideImage" > 
         <div class="row">
-            <div class="col-lg-5 col-md-4 col-sm-12 picOne">
+            <div class="col-lg-5 col-md-12 picOne">
                 <!-- <img src="../assets/cateringMaine.jpg" class="img-fluid" alt="Trays of deli meats and stuffed tomatoes"> -->
             </div>
-            <div class="col-lg-7 col-md-8 col-sm-12">
+            <div class="col-lg-7 col-md-12">
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text AcardHeading">Our Catering Service</p>
@@ -77,14 +77,14 @@
                 </div>
             </div>
         </div>
-        <div class="row pt-5">
-            <div class="col-4">
+        <div class="row pt-3">
+            <div class="col-lg-4 col-md-12 d-flex justify-content-center pt-2">
                 <img src="../assets/catering1.jpg" class="img-thumbnail" alt="Charcuterie board">
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-md-12 d-flex justify-content-center pt-2">
                 <img src="../assets/catering2.jpg" class="img-thumbnail" alt="Three sliders">
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-md-12 d-flex justify-content-center pt-2">
                 <img src="../assets/catering3.jpg" class="img-thumbnail" alt="Tray of desserts">
             </div>
             </div>
