--- a/pages/about.html
+++ b/pages/about.html
@@ -28,7 +28,7 @@
                     <a class="nav-link navbarFont" href="#">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/catering.html">Catering</a>
+                    <a class="nav-link navbarFont" href="../pages/catering.html">Catering</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link navbarFont" href="#">Photo</a>
@@ -39,7 +39,7 @@
     <div class="container pt-3">
         <div class="row">
             <div class="col-lg-5 col-sm-12">
-                <img src="../assets/AboutMain.jpg" class="img-fluid" alt="...">
+                <img src="../assets/AboutMain.jpg" class="img-fluid" alt="Two dogs looking at ingredients">
             </div>
             <div class="col-lg-7 col-sm-12">
                 <div class="card">
@@ -169,7 +169,7 @@
 <div class="footer">
     <div class="container-fluid py-5">
         <div class="row">
-            <div class="col-6 d-flex justify-content-start">
+            <div class="col-6 d-flex justify-content-start AcardText">
                 <p>1357 Mutt Street, Rottweller CA. 12345</p>
             </div>
             <div class="col-6 d-flex justify-content-end">
@@ -178,10 +178,10 @@
         </div>
 
         <div class="row">
-            <div class="col-6  d-flex justify-content-start">
+            <div class="col-6  d-flex justify-content-start AcardText">
                 <p>Phone: 123-456-7890</p>
             </div>
-            <div class="col-6 d-flex justify-content-end">
+            <div class="col-6 d-flex justify-content-end AcardText">
                 <p>Copyright @ Muzzles Restaurant</p>
             </div>
         </div>
