Add font to footer

--- a/pages/catering.html
+++ b/pages/catering.html
@@ -106,7 +106,7 @@
 <div class="footer">
     <div class="container-fluid py-5">
         <div class="row">
-            <div class="col-6 d-flex justify-content-start">
+            <div class="col-6 d-flex justify-content-start AcardText">
                 <p>1357 Mutt Street, Rottweller CA. 12345</p>
             </div>
             <div class="col-6 d-flex justify-content-end">
@@ -115,10 +115,10 @@
         </div>
 
         <div class="row">
-            <div class="col-6  d-flex justify-content-start">
+            <div class="col-6  d-flex justify-content-start AcardText">
                 <p>Phone: 123-456-7890</p>
             </div>
-            <div class="col-6 d-flex justify-content-end">
+            <div class="col-6 d-flex justify-content-end AcardText">
                 <p>Copyright @ Muzzles Restaurant</p>
             </div>
         </div>
