Added responsive navbar

--- a/pages/catering.html
+++ b/pages/catering.html
@@ -15,7 +15,33 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light">
+    
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html"><img src="../assets/MuzzlesLogo.png" alt="Muzzles Restaurant logo" width="250" height="92"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="nav">
+              <li class="nav-item">
+                <a class="nav-link navbarFont" aria-current="page" href="../pages/about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link navbarFont" href="../pages/menu.html">Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active navbarFont" href="../pages/catering.html">Catering</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link navbarFont" href="../pages/photos.html">Photos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    
+    <!-- <nav class="navbar navbar-light">
         <div class="container">
             <a class="navbar-brand" href="../index.html">
                 <img src="../assets/MuzzlesLogo.png" alt="Muzzles Restaurnt logo" width="250" height="92">
@@ -35,7 +61,7 @@
                 </li>
             </ul>
         </div>
-    </nav>
+    </nav> -->
     <div class="row pt-3">
         <div class="col-12 ATeamHeading">
             <h2>Catering</h2>
