--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
   <nav class="navbar navbar-expand-lg navbar-light ">
     <div class="container-fluid ">
-      <a class="navbar-brand" href="#">
-        <img src="./assets/MuzzlesLogo.png" alt="" width="250" height="92">
+      <a class="navbar-brand" href="./index.html" >
+        <img src="./assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -115,7 +115,7 @@
             <a class="nav-link navbarFont" href="./pages/catering.html">Catering</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link navbarFont" href="./pages/photo.html">Photo</a>
+            <a class="nav-link navbarFont" href="./pages/photos.html">Photos</a>
           </li>
         </ul>
       </div>
