change the heading style

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -72,7 +72,7 @@
     <div style="background-color: #ffffff;" class="container d-flex justify-content-center">
         <div class="row py-3">
             <div class="col">
-                <h2 class="Mtitle">Our Menu</h2>
+                <h2 class="AcardHeading">Our Menu</h2>
             </div>
         </div>
     </div>
