--- a/pages/photos.html
+++ b/pages/photos.html
@@ -71,7 +71,7 @@
     <div style="background-color: #ffffff;" class="container d-flex justify-content-center mt-5">
         <div class="row py-3">
             <div class="col">
-                <h2 class="P-title">Photos</h2>
+                <h2 class="AcardHeading">Photos</h2>
             </div>
         </div>
     </div>
